<resources>
    <string name="app_name">SpyCam</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_enable_spycam">Detect Phone Unlock Success</string>
    <string name="pref_description_enable_spycam">SpyCam will take photos every time your phone is unlocked</string>

    <string name="pref_title_pin_code">Pin Code</string>
    <string name="pref_description_pin_code">Enable Pin Code Protection</string>

    <string name="pref_title_unlock_fail">Detect Phone Unlock Failures</string>
    <string name="pref_description_unlock_fail">Take photos when user failed to unlock this phone (App needs admin permission for this)</string>

    <string name="pref_title_number_of_photos">Number of photos after phone is unlocked</string>
    <string-array name="pref_number_of_photos_titles">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
    <string-array name="pref_number_of_photos_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_settings">Settings</string>
    <string name="title_delete">Delete</string>
    <string name="title_delete_all">Delete All Photos</string>
</resources>
