<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_spy_switch"
        android:summary="@string/pref_description_enable_spycam"
        android:title="@string/pref_title_enable_spycam" />

    <SwitchPreference
        android:defaultValue="false"
        android:enabled="false"
        android:key="enable_pin_switch"
        android:summary="@string/pref_description_pin_code"
        android:title="@string/pref_title_pin_code" />


    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_unlock_failures"
        android:summary="@string/pref_description_unlock_fail"
        android:title="@string/pref_title_unlock_fail" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_number_of_photos_titles"
        android:entryValues="@array/pref_number_of_photos_values"
        android:key="number_of_photos"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_number_of_photos" />

</PreferenceScreen>
